RHIN-1643: setting overflow scrolling to auto for iphone fix

--- a/src/less/tables.less
+++ b/src/less/tables.less
@@ -702,6 +702,7 @@
   .ReactTable {
     padding-left: 0;
     overflow: hidden;
+    -webkit-overflow-scrolling: auto;
 
     .rt-table {
       overflow-x: scroll;
